# demmio

./: .gitignore  CMakeLists.txt  Slide.cpp  Slide.h  Style.cpp  Style.h  main.cpp
src/: Slide.cpp  Slide.h  Style.cpp  Style.h  Util.cpp  Util.h  main.cpp
src/Nodes/: ImageNode.cpp  ImageNode.h  Node.h  TextNode.cpp  TextNode.h
test.dem/: slides.json  style.json
